[gd_scene load_steps=11 format=3 uid="uid://bn542q8plyel2"]

[ext_resource type="Texture2D" uid="uid://d2ita2i5f2yiu" path="res://UI/health_bar_bg.png" id="1_6itr6"]
[ext_resource type="Script" path="res://Scripts/ui.gd" id="1_xj44g"]
[ext_resource type="Texture2D" uid="uid://cfefekefr7cow" path="res://UI/health_bar_overlay.png" id="2_syj08"]
[ext_resource type="Texture2D" uid="uid://bn7xnvvsaj4ej" path="res://UI/health_bar_progress.png" id="3_wt2gf"]
[ext_resource type="Texture2D" uid="uid://bvukl1p11v25a" path="res://UI/rupee_ui.png" id="5_yb2aw"]
[ext_resource type="FontFile" uid="uid://bfo4kkhucg2ix" path="res://UI/Early GameBoy.ttf" id="6_dlhp0"]

[sub_resource type="Animation" id="Animation_j8m3d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HealthMargin/HealthTexture:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_fes0b"]
resource_name = "low_health"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HealthMargin/HealthTexture:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8vm8q"]
_data = {
"RESET": SubResource("Animation_j8m3d"),
"low_health": SubResource("Animation_fes0b")
}

[sub_resource type="LabelSettings" id="LabelSettings_khjgx"]
font = ExtResource("6_dlhp0")
font_size = 8
outline_color = Color(0, 0, 0, 1)
shadow_color = Color(0, 0, 0, 0.392157)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_xj44g")

[node name="HealthMargin" type="MarginContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -32.0
offset_top = -8.0
offset_right = 32.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 20

[node name="HealthTexture" type="TextureProgressBar" parent="HealthMargin"]
layout_mode = 2
value = 100.0
texture_under = ExtResource("1_6itr6")
texture_over = ExtResource("2_syj08")
texture_progress = ExtResource("3_wt2gf")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8vm8q")
}

[node name="MoneyCount" type="Control" parent="."]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -32.0
offset_right = 56.0
offset_bottom = -16.0
grow_vertical = 0

[node name="Texture" type="TextureRect" parent="MoneyCount"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -8.0
offset_right = 16.0
offset_bottom = 8.0
grow_vertical = 2
texture = ExtResource("5_yb2aw")
expand_mode = 1

[node name="x" type="Label" parent="MoneyCount"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 16.0
offset_top = -4.5
offset_right = 32.0
offset_bottom = 8.5
grow_vertical = 2
text = "x"
label_settings = SubResource("LabelSettings_khjgx")

[node name="RupeeCount" type="Label" parent="MoneyCount"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 25.0
offset_top = -4.0
offset_right = 41.0
offset_bottom = 9.0
grow_vertical = 2
text = "99"
label_settings = SubResource("LabelSettings_khjgx")
